--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Reset CSS */
 * {
     margin: 0;
@@ -26,6 +25,34 @@
     margin: 0 auto;
 }
 
+body{
+    overflow-x: hidden;
+    background-color: var(--fundo-site);
+}
+
+.titulo {
+    display: flex;
+    font-family: "Recursive", sans- linear -bold;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.titulo h2{
+    color: var(--branco);
+    margin-bottom: 0;
+    background-color: var(--roxo-pixelV);
+    border-radius: 20px;
+    padding: 10px 18px;
+}
+
+.titulo span{
+    color: var(--roxo-pixelV);
+    border-bottom: solid 3px var(--verde-pixelV);
+}
+
+/* ---------------HEADER--------------- */
+
+
 .banner {
     background-image: url(./img/Banner.png);
     height: 120vh;
@@ -36,7 +63,6 @@
     flex-direction: column;
     justify-content: space-between;
 }
-
 
 header {
     height: 165px;
@@ -63,7 +89,7 @@ header img {
 .menu a {
     font-size: 20;
     color: var(--branco);
-    font-family: "Recursive", sans-linear;
+    font-family: "Recursive", sans- linear;
 
     text-decoration: underline transparent;
     text-decoration-thickness: 2px;
@@ -72,7 +98,7 @@ header img {
 }
 
 .menu a:hover {
-    text-decoration-color: #00c621;
+    text-decoration-color: var(--verde-pixelV);
 }
 
 .conteudo-banner {
@@ -88,7 +114,7 @@ header img {
 
 .conteudo-banner p {
     font-size: 26px;
-    font-family: "Recursive", sans-linear;
+    font-family: "Recursive", sans- linear;
     color: var(--branco);
     width: 350px;
     margin-bottom: 100px;
@@ -101,6 +127,45 @@ header img {
     font-family: "Recursive", sans-linear-bold;
     color: var(--verde-pixelV);
     list-style-type: none;
-    padding: 0;}
+    padding: 0;
+}
 
 
+/* ---------------SOBRE--------------- */
+
+#sobre {
+    display: flex;
+    align-items: center;
+    gap: 80px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+#sobre img {
+    max-width: 460px;
+    width: 40%;
+    border-radius: 40px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+#sobre h2 {
+    margin-right: 5px;
+}
+
+#sobre p {
+    font-family: "Recursive", sans- linear;
+    font-size: 20px;
+    text-align: justify;
+    margin-top: 30px
+}
+
+/* ---------------PARALLAX----------------- */
+
+#parallax{
+    height: 250px;
+    background: linear-gradient(rgba(0 ,0 ,0 ,0.26)), url(./img/parallax.svg);
+    margin-bottom: 120px;
+    background-attachment: fixed;
+    background-size: 30%;
+
+}
