--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Reset CSS */
 * {
     margin: 0;
     padding: 0;
@@ -7,16 +6,17 @@
 
 @font-face {
     font-family: "Recursive";
-    src: url(./fonts/Recursive-VariableFont_CASL\,CRSV\,MONO\,slnt\,wght.ttf);
+    src: url(./Fonts/Recursive-VariableFont_CASL\,CRSV\,MONO\,slnt\,wght.ttf);
 }
 
 :root {
     --branco: #FFFFFF;
     --preto: #000000;
-    --verde-pixelV: #00C623;
+    --verde-pixelV: #00C621;
     --roxo-pixelV: #4700CF;
     --fundo-site: #F3F2F2;
     --contato: #E5E5E5;
+
 }
 
 .container-grid {
@@ -25,19 +25,19 @@
     margin: 0 auto;
 }
 
-body{
+body {
     overflow-x: hidden;
     background-color: var(--fundo-site);
 }
 
 .titulo {
     display: flex;
-    font-family: "Recursive", sans- linear -bold;
+    font-family: "Recursive", sans linear-bold;
     font-size: 35px;
     font-weight: 600;
 }
 
-.titulo h2{
+.titulo h2 {
     color: var(--branco);
     margin-bottom: 0;
     background-color: var(--roxo-pixelV);
@@ -45,16 +45,15 @@ body{
     padding: 10px 18px;
 }
 
-.titulo span{
+.titulo span {
     color: var(--roxo-pixelV);
     border-bottom: solid 3px var(--verde-pixelV);
 }
 
-/* ---------------HEADER--------------- */
-
+/* ------------Header-------------- */
 
 .banner {
-    background-image: url(./img/Banner.png);
+    background-image: url("./img/Banner.png");
     height: 120vh;
     background-repeat: no-repeat;
     background-position: 0 -10px;
@@ -62,11 +61,13 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
 }
 
 header {
     height: 165px;
 }
+
 
 header .container-grid {
     height: 100%;
@@ -84,12 +85,13 @@ header img {
     width: 70%;
     display: flex;
     justify-content: space-between;
+
 }
 
 .menu a {
-    font-size: 20;
+    font-size: 20px;
     color: var(--branco);
-    font-family: "Recursive", sans- linear;
+    font-family: "Recursive", sans-linear;
 
     text-decoration: underline transparent;
     text-decoration-thickness: 2px;
@@ -107,14 +109,14 @@ header img {
     align-items: center;
 }
 
-.conteudo-banner img {
+.conteudo-banner img{
     max-width: 380px;
     width: 50%;
 }
 
 .conteudo-banner p {
     font-size: 26px;
-    font-family: "Recursive", sans- linear;
+    font-family: "Recursive", sans-Linear;
     color: var(--branco);
     width: 350px;
     margin-bottom: 100px;
@@ -131,9 +133,8 @@ header img {
 }
 
 
-/* ---------------SOBRE--------------- */
-
-#sobre {
+/* ---------------SOBRE---------------- */
+#Sobre {
     display: flex;
     align-items: center;
     gap: 80px;
@@ -141,31 +142,119 @@ header img {
     margin-bottom: 120px;
 }
 
-#sobre img {
+#Sobre img {
     max-width: 460px;
     width: 40%;
     border-radius: 40px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
-#sobre h2 {
+#Sobre h2 {
     margin-right: 5px;
 }
 
-#sobre p {
-    font-family: "Recursive", sans- linear;
+#Sobre p {
+    font-family: "Recursive", sans-linear;
     font-size: 20px;
     text-align: justify;
-    margin-top: 30px
+    margin-top: 30px;
 }
 
-/* ---------------PARALLAX----------------- */
+/* -------------------parallax--------------- */
 
 #parallax{
     height: 250px;
-    background: linear-gradient(rgba(0 ,0 ,0 ,0.26)), url(./img/parallax.svg);
-    margin-bottom: 120px;
-    background-attachment: fixed;
-    background-size: 30%;
 
-}
+    background-image: url(./img/parallax.svg);
+
+    background: linear-gradient(rgba(0, 0, 0, 0.26)), url(./img/parallax.svg);
+
+    margin-bottom: 120px;
+
+    background-attachment: fixed;
+
+    background-size: 30%;
+    }
+
+    /* ---------------Serviços--------------- */
+    #servicos{
+        margin-bottom: 120px;
+    }
+    
+
+    #servicos .titulo{
+        justify-content: center;
+        margin-bottom: 55px;
+    }
+
+    #servicos h2{
+        margin-left: 5px;
+    }
+
+    .container-cards{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        position: relative;
+    }
+
+
+
+    .linha-roxa{
+        height: 250px;
+        width: 100vw;
+        background: linear-gradient(0deg, rgba(36, 0, 105, 1)0%, rgba(71, 0, 207, 1)100%);
+        position: absolute;
+        z-index: -1;
+        top: calc(50% - 125px);
+        
+    }
+
+    #servicos .card{
+        width: 300px;
+        margin: 20px;
+        padding: 40px 20px;
+        border-radius: 40px;
+        background-color: #f2f2f2;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        text-align: center;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #servicos .card h3{
+
+    font-size: 24px;
+    margin: 5px 0 30px;
+    color: var(--roxo-pixelV);
+    font-family: "Recursive", sans-linear-bold;
+    text-align: center;
+    }
+
+    #servicos .card p{
+        font-family: "Recursive", sans-linear;
+        font-size: 18px;
+        margin-bottom: 20px;
+        line-height: 1.5;
+    }
+    
+    #servicos .card svg{
+        color: var(--roxo-pixelV);
+        height: 75px;
+    }
+
+    #servicos .card:hover {
+        border: solid 3px var(--verde-pixelV);
+    }
+    
+    #servicos .card:hover svg{
+        fill: var(--verde-pixelV);
+    }
+
+    #servicos .card:hover h3{
+        color: var(--verde-pixelV);
+    }
